Crash Bevel Modifier with Vertex Group #57850

Closed
opened 2018-11-15 12:49:40 +01:00 by Catalin · 7 comments

System Information
Windows 10, GeForce GTX 1060 6GB/PCIe/SSE2

Blender Version
Broken: (Blender 2.80 (sub 30), hash: c94f806dc7 )

Short description of error
When trying a Bevel Modifier with Face Area ( Normal Mode ) , Blender Crashes

Exact steps for others to reproduce the error

  1. Create an L shape from edges .
  2. Select Middle Vertice and create a vertex group with 1.00 Weight
  3. Put a Skin Modifier - Default Values
  4. Put a Bevel Modifier - on the Vertex Group
  5. Select Face Area in the Bevel Modifier
    Blender Crashes

BugTest.blend

I've atached the Blend File, just go to modifiers and press Face Area and see the crash .

**System Information** Windows 10, GeForce GTX 1060 6GB/PCIe/SSE2 **Blender Version** Broken: (Blender 2.80 (sub 30), hash: c94f806dc73 ) **Short description of error** When trying a Bevel Modifier with Face Area ( Normal Mode ) , Blender Crashes **Exact steps for others to reproduce the error** 1. Create an L shape from edges . 2. Select Middle Vertice and create a vertex group with 1.00 Weight 3. Put a Skin Modifier - Default Values 4. Put a Bevel Modifier - on the Vertex Group 5. Select Face Area in the Bevel Modifier Blender Crashes [BugTest.blend](https://archive.blender.org/developer/F5568300/BugTest.blend) I've atached the Blend File, just go to modifiers and press Face Area and see the crash .
Author

Added subscriber: @giakaama

Added subscriber: @giakaama
Member

Added subscribers: @howardt, @lichtwerk

Added subscribers: @howardt, @lichtwerk
Howard Trickey was assigned by Philipp Oeser 2018-11-15 15:04:23 +01:00
Member

Can confirm the crash.

Looks like this might just be a typo?
BMLoop *l is used here (and NULL) [and it looks like l was meant for another loop.... but I could be totally wrong here]

1   bevel_mod_harden_normals                                                                                                                                                                                  MOD_bevel.c       201  0x24ddeea 
2   applyModifier                                                                                                                                                                                             MOD_bevel.c       445  0x24e40cd 
3   modwrap_applyModifier                                                                                                                                                                                     modifier.c        839  0x2ac99d1 
4   mesh_calc_modifiers                                                                                                                                                                                       DerivedMesh.c     1446 0x2974458 
5   mesh_build_data                                                                                                                                                                                           DerivedMesh.c     2002 0x29766a7 
6   makeDerivedMesh                                                                                                                                                                                           DerivedMesh.c     2109 0x2976af6 
7   BKE_object_handle_data_update                                                                                                                                                                             object_update.c   213  0x2b06150 
8   BKE_object_eval_uber_data                                                                                                                                                                                 object_update.c   342  0x2b06732 

maybe like P824?

but leaving to @howardt to decide.... mind having a look?

Can confirm the crash. Looks like this might just be a typo? BMLoop *l is used here (and NULL) [and it looks like l was meant for another loop.... but I could be totally wrong here] ``` 1 bevel_mod_harden_normals MOD_bevel.c 201 0x24ddeea 2 applyModifier MOD_bevel.c 445 0x24e40cd 3 modwrap_applyModifier modifier.c 839 0x2ac99d1 4 mesh_calc_modifiers DerivedMesh.c 1446 0x2974458 5 mesh_build_data DerivedMesh.c 2002 0x29766a7 6 makeDerivedMesh DerivedMesh.c 2109 0x2976af6 7 BKE_object_handle_data_update object_update.c 213 0x2b06150 8 BKE_object_eval_uber_data object_update.c 342 0x2b06732 ``` maybe like [P824](https://archive.blender.org/developer/P824.txt)? but leaving to @howardt to decide.... mind having a look?
Member

I too confirm the crash and will work on fixing it.

I too confirm the crash and will work on fixing it.

This issue was referenced by 91aa81b61d

This issue was referenced by 91aa81b61dd0df29c23ca05fc4104c0f4117e8a6
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Indeed, it was a type for Loop variable. Thanks. Fixed now.

Indeed, it was a type for Loop variable. Thanks. Fixed now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57850
No description provided.