Fix T57850, bevel modifier crash with vertex groups and face area mode.

Used wrong Loop variable in this case.